[gd_scene load_steps=15 format=3 uid="uid://bw8bdwscg5lus"]

[ext_resource type="Script" uid="uid://4evlacl3e77s" path="res://scripts/start.gd" id="1_bodal"]
[ext_resource type="Texture2D" uid="uid://ci23oewimy2gr" path="res://assets/sprites/UI/start.png" id="2_1nvso"]
[ext_resource type="Texture2D" uid="uid://dk0tj1quwxbcn" path="res://assets/sprites/UI/start_toggle.png" id="3_gsp51"]
[ext_resource type="Texture2D" uid="uid://ddoa2mqqjdmed" path="res://assets/sprites/UI/load.png" id="4_r8uic"]
[ext_resource type="Texture2D" uid="uid://bqsbeakpsvpvg" path="res://assets/sprites/UI/load_toggle.png" id="5_x1pfr"]
[ext_resource type="Texture2D" uid="uid://dpn27g74kmrg4" path="res://assets/sprites/UI/settings.png" id="6_n0tym"]
[ext_resource type="Texture2D" uid="uid://8tq0dmcjjs4h" path="res://assets/sprites/UI/settings_toggle.png" id="7_8jfef"]
[ext_resource type="Texture2D" uid="uid://c7h1n46wxhmum" path="res://assets/sprites/UI/quit.png" id="8_qfvu4"]
[ext_resource type="Texture2D" uid="uid://blleialv7by61" path="res://assets/sprites/UI/quit_toggle.png" id="9_twuju"]
[ext_resource type="AudioStream" uid="uid://13urc524u2e8" path="res://assets/music/title_screenA2O.mp3" id="10_m8nf6"]
[ext_resource type="Texture2D" uid="uid://bi5y7rtdm2d7x" path="res://assets/sprites/TITLE_SPRITESHEET1.png" id="11_pgjjs"]
[ext_resource type="Texture2D" uid="uid://f45x1fsqy5ri" path="res://Abyss of oblivion assets workshop/2025_11_09_02l_Kleki.png" id="12_1nvso"]
[ext_resource type="PackedScene" uid="uid://clt8qha503vd1" path="res://scenes/fade_transition.tscn" id="13_gsp51"]

[sub_resource type="ButtonGroup" id="ButtonGroup_pgjjs"]
allow_unpress = true

[node name="START" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 1.0
offset_right = 1.0
mouse_filter = 2
script = ExtResource("1_bodal")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 92)
zoom = Vector2(3.6, 3.6)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 322.0
offset_bottom = 182.0
color = Color(0, 0, 0, 1)

[node name="UI" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 322.0
offset_bottom = 182.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="START" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_neighbor_top = NodePath("../QUIT")
focus_neighbor_bottom = NodePath("../LOAD")
focus_next = NodePath("../LOAD")
focus_previous = NodePath("../QUIT")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_pgjjs")
texture_normal = ExtResource("2_1nvso")
texture_pressed = ExtResource("3_gsp51")
texture_hover = ExtResource("2_1nvso")
texture_focused = ExtResource("3_gsp51")

[node name="LOAD" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_neighbor_top = NodePath("../START")
focus_neighbor_bottom = NodePath("../SETTINGS")
focus_next = NodePath("../SETTINGS")
focus_previous = NodePath("../START")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_pgjjs")
texture_normal = ExtResource("4_r8uic")
texture_pressed = ExtResource("5_x1pfr")
texture_hover = ExtResource("4_r8uic")
texture_focused = ExtResource("5_x1pfr")

[node name="SETTINGS" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_neighbor_top = NodePath("../LOAD")
focus_neighbor_bottom = NodePath("../QUIT")
focus_next = NodePath("../QUIT")
focus_previous = NodePath("../LOAD")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_pgjjs")
texture_normal = ExtResource("6_n0tym")
texture_pressed = ExtResource("7_8jfef")
texture_hover = ExtResource("6_n0tym")
texture_focused = ExtResource("7_8jfef")

[node name="QUIT" type="TextureButton" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_neighbor_top = NodePath("../SETTINGS")
focus_neighbor_bottom = NodePath("../START")
focus_next = NodePath("../START")
focus_previous = NodePath("../SETTINGS")
toggle_mode = true
action_mode = 0
button_group = SubResource("ButtonGroup_pgjjs")
texture_normal = ExtResource("8_qfvu4")
texture_pressed = ExtResource("9_twuju")
texture_hover = ExtResource("8_qfvu4")
texture_focused = ExtResource("9_twuju")

[node name="TitleSpritesheet1" type="Sprite2D" parent="UI"]
position = Vector2(160, 60)
scale = Vector2(2, 2)
texture = ExtResource("11_pgjjs")
hframes = 5
vframes = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_m8nf6")
volume_db = -10.0
autoplay = true

[node name="logo" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(159, 94)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_1nvso")

[node name="fade_transition" parent="." instance=ExtResource("13_gsp51")]
visible = false

[node name="logo_fade_out_timer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[connection signal="pressed" from="UI/VBoxContainer/START" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/LOAD" to="." method="_on_load_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/SETTINGS" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="logo_fade_out_timer" to="." method="_on_logo_fade_out_timer_timeout"]
